--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,55 @@
 {
-  "name": "Bank of Boston",
+  "name": "BankBoston",
   "short_name": "BankBoston",
-  "description": "Accede a tu cuenta, revisa saldos y realiza transferencias de forma segura en BankBoston.",
-  "start_url": "/index.html",
-  "scope": "/",
+  "start_url": "index.html",
   "display": "standalone",
-  "orientation": "portrait",
-  "background_color": "#ffffff",
-  "theme_color": "#003366",
+  "background_color": "#003366",
+  "theme_color": "#00509e",
+  "description": "App del Banco Boston para gestionar tu cuenta",
+  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "icons/icon-192x192.png",
       "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-144x144.png",
+      "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512.png",
-      "sizes": "512x512",
+      "src": "icons/icon-48x48.png",
+      "sizes": "48x48",
       "type": "image/png"
     }
-  ]
+  ],
+  "screenshots": [
+    {
+      "src": "icons/screenshot1.png",
+      "sizes": "1080x1920",
+      "type": "image/png",
+      "label": "Pantalla de inicio de sesión"
+    },
+    {
+      "src": "icons/screenshot2.png",
+      "sizes": "1080x1920",
+      "type": "image/png",
+      "label": "Vista de cuenta bancaria"
+    }
+  ],
+  "related_applications": [
+    {
+      "platform": "play",
+      "url": "https://play.google.com/store/apps/details?id=com.bankboston.app"
+    }
+  ],
+  "prefer_related_applications": false
 }
-
